[project]
name = "jltool"
version = "0.1.0"
description = "CLI for managing Jarvislabs.ai infrastructure via the Jarvislabs SDK"
requires-python = ">=3.10"
dependencies = [
    "jarvislabs>=0.2.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
jltool = "jltool.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jltool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --color=no"
filterwarnings = [
    "ignore::DeprecationWarning",
]
